--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bcrypt": "^5.0.1",
     "dotenv": "^10.0.0",
     "fastify": "^3.25.0",
+    "fastify-cors": "^6.0.2",
     "fastify-jwt": "^4.1.3",
     "fastify-mongodb": "^4.1.1",
     "fastify-plugin": "^3.0.0",
