--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^10.0.0",
     "fastify": "^3.25.0",
     "fastify-cors": "^6.0.2",
+    "fastify-https-redirect": "^1.0.4",
     "fastify-jwt": "^4.1.3",
     "fastify-mongodb": "^4.1.1",
     "fastify-plugin": "^3.0.0",
